--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "~TODO~",
+  "name": "TODO",
   "version": "0.0.1",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
