--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@sveltejs/kit": "next",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0"
+    "sass": "^1.34.0",
+    "svelte": "^3.34.0",
+    "svelte-preprocess": "^4.7.3"
   },
   "type": "module"
 }
